--- a/english.html
+++ b/english.html
@@ -17,7 +17,7 @@
 		<p id ="headline">Click below for the House Rules in your preferred language:</p>
 
 		<div class="row">
-			<a href=""><img class="flag" src="flags/UK.webp"></a>
+			<a href="house_rules/rules_english.docx"><img class="flag" src="flags/UK.webp"></a>
 			<a href=""><img class="flag" src="flags/basque.png"></a>
 			<a href=""><img class="flag"src="flags/spanish.png"></a>
 			<a href=""><img class="flag" src="flags/lesotho.png"></a>
