--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 
 	<div id="numbers" class="container-fluid">
 		<p id ="headline">Important numbers:</p>
-		<p style="color:darkslategray; text-align: center;">Oscar's number: 0123 456 789</p>
-		<p style="color:darkslategray; text-align: center;">Alan and Jen's number: 0800 shmend</p>
-		<p style="color:darkslategray; text-align: center;">Emergency number: 0123 456 789</p>
+		<p style="color:darkslategray; text-align: center;">Alan and Jen's number (WhatsApp): +44 7851631541</p>
+		<p style="color:darkslategray; text-align: center;">Oscar's number: +34 610 79 37 48</p>
 	</div>
 
 	<!-- <div id="main-content" class="container-fluid">
