added french rules

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="row">
 			<a href=""><img class="flag" src="flags/basque.png"></a>
 			<a href=""><img class="flag"src="flags/spanish.png"></a>
-			<a href=""><img class="flag" src="flags/french.png"></a>
+			<a href="house_rules/rules_french.docx"><img class="flag" src="flags/french.png"></a>
 			<a href="house_rules/rules_english.docx"><img class="flag" src="flags/UK.webp"></a>
 		</div>
 	</header>
