--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<p id ="headline">Click below for the House Rules in your preferred language:</p>
 
 		<div class="row">
-			<a href=""><img class="flag" src="flags/basque.png"></a>
-			<a href=""><img class="flag"src="flags/spanish.png"></a>
+			<a href="house_rules/rules_basque.docx"><img class="flag" src="flags/basque.png"></a>
+			<a href="house_rules/rules_spanish.docx"><img class="flag"src="flags/spanish.png"></a>
 			<a href="house_rules/rules_french.docx"><img class="flag" src="flags/french.png"></a>
 			<a href="house_rules/rules_english.docx"><img class="flag" src="flags/UK.webp"></a>
 		</div>
