updates to home page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
 <body>
 	<header>
-		<p id ="headline">Welcome to the flat!</p>
-		<p id ="headline">Click below for the House Rules in your preferred language:</p>
+		<p id ="headline">Aukeratu zure hizkuntza – egin klik bandera batean</p>
+		<p id ="headline">Elige tu idioma – haz clic en una bandera</p>
+		<p id ="headline">Choisissez votre langue – cliquez sur un drapeau</p>
+		<p id ="headline">Choose your language – click on a flag</p>
 
 		<div class="row">
 			<a href="house_rules/rules_basque.docx"><img class="flag" src="flags/basque.png"></a>
