removed numbers from homepage

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 		</div>
 	</header>
 
-	<div id="numbers" class="container-fluid">
+	<!-- <div id="numbers" class="container-fluid">
 		<p id ="headline">Important numbers:</p>
 		<p style="color:darkslategray; text-align: center;">Alan and Jen's number (WhatsApp): +44 7851631541</p>
 		<p style="color:darkslategray; text-align: center;">Oscar's number: +34 610 79 37 48</p>
-	</div>
+	</div> -->
 
 	<!-- <div id="main-content" class="container-fluid">
 		<p style="color:darkslategray;">House rules</p>
